fix: remove overflow scroll

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,5 +13,4 @@ body {
 	font-family: 'Roboto', sans-serif;
 	padding: 0;
 	margin: 0;
-	overflow-y: scroll;
 }
